--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@
             transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             position: relative;
             overflow: hidden;
+            margin-top: 17px;
         }
 
         .skill-card:hover {
@@ -1467,7 +1468,7 @@
             <!-- Skill 1 -->
             <div class="skill-card">
                 <div class="skill-icon">
-                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3"></i>
                 </div>
                 <h3 class="skill-name">HTML5</h3>
                 <p class="skill-desc">Semantic markup, accessibility standards, and modern HTML5 features.</p>
@@ -1475,11 +1476,20 @@
             <!-- Skill 1 -->
             <div class="skill-card">
                 <div class="skill-icon">
-                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-react"></i>
                 </div>
                 <h3 class="skill-name">HTML5</h3>
                 <p class="skill-desc">Semantic markup, accessibility standards, and modern HTML5 features.</p>
             </div>
+            <!-- Skill 1 -->
+            <div class="skill-card">
+                <div class="skill-icon">
+                    <i class="fab fa-js"></i>
+                </div>
+                <h3 class="skill-name">HTML5</h3>
+                <p class="skill-desc">Semantic markup, accessibility standards, and modern HTML5 features.</p>
+            </div>
+            
             <!-- Skill 1 -->
             <div class="skill-card">
                 <div class="skill-icon">
